--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -38,6 +38,15 @@ svg.feather {
 .card > .table thead th {
     border-width: 1px;
 }
+.card-header {
+    font-weight: 600;
+}
+.card-header--with-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px 20px;
+}
 .card-footer .pagination {
     margin-bottom: 0;
 }
@@ -113,4 +122,8 @@ table.dataTable.no-footer {
     background-repeat: no-repeat;
     background-size: 15%;
     border-radius: 4px;
+}
+
+.input-group .btn-outline-secondary {
+    border-color: #ced4da;
 }
